# pull-list

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  PLAN.md  README.md  check_one_off_data.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fix_production_is_one_off.py  force_fix_is_one_off.py  migrate_is_one_off.py  pyproject.toml  requirements.txt  test_formatting.py
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
.serena/: project.yml
app/: __init__.py  config.py  database.py  dependencies.py  main.py  migrations.py  models.py  scheduler.py
app/services/: __init__.py  auth.py  email.py  komga.py  mylar.py  pulllist.py
app/templates/: base.html  dashboard.html  forgot_password.html  login.html  logs.html  reset_password.html  settings.html  setup.html
app/templates/partials/: add_book_button.html  add_issue_button.html  add_series_button.html  available_books_grid.html  book_card.html  confirm_modal.html  pull_list_grid.html  series_search_results.html  status_badges.html  tracked_series_list.html  view_komga_button.html
scripts/: generate_favicons.py
static/: site.webmanifest
tests/: conftest.py  test_auth.py  test_komga.py  test_pulllist.py  test_pulllist_service.py
